--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	"authors": [
 		{
 			"name": "Mark Scherer",
-			"homepage": "http://www.dereuromark.de"
+			"homepage": "http://www.dereuromark.de",
+			"role": "Maintainer"
 		}
 	],
 	"require": {
